--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,8 +17,9 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  schedule:
-    - cron: '25 12 * * 4'
+  repository_dispatch:
+    types: 
+        - trigger
 
 jobs:
   analyze:
